--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -5,6 +5,10 @@ html {
         overflow: hidden;
     }
 
+    @include media-breakpoint-down(xl) {
+        font-size: 15px;
+    }
+
     @include media-breakpoint-down(lg) {
         font-size: 14px;
     }
