--- a/src/assets/scss/base/_fonts.scss
+++ b/src/assets/scss/base/_fonts.scss
@@ -31,4 +31,7 @@ $font-weight: 400, $font-style: normal, $support-required: 'modern') {
     }
 }
 
+@include font-face("Helvetica", "@assets/fonts/Helvetica-Light", 300, normal, "modern");
 @include font-face("Helvetica", "@assets/fonts/Helvetica-Regular", 400, normal, "modern");
+@include font-face("Helvetica", "@assets/fonts/Helvetica-Medium", 500, normal, "modern");
+@include font-face("Helvetica", "@assets/fonts/Helvetica-Bold", 700, normal, "modern");
