--- a/src/assets/scss/pages/_frontpage.scss
+++ b/src/assets/scss/pages/_frontpage.scss
@@ -27,8 +27,18 @@ $shadows-big: multiple-box-shadow(100);
             transition: 500ms opacity, 1s transform;
             pointer-events: none;
 
+            @media (max-width: 1500px) {
+                height: 650px;
+                width: 650px;
+                left: 56vw;
+            }
+
             @include media-breakpoint-down(xl) {
                 left: 46vw;
+            }
+
+            @include media-breakpoint-down(lg) {
+                left: 35vw;
             }
 
             @include media-breakpoint-down(md) {
@@ -75,7 +85,7 @@ $shadows-big: multiple-box-shadow(100);
                     }
                 }
             }
-    
+
             &--full-circle {
                 @include media-breakpoint-down(md) {
                     &::after {
@@ -89,9 +99,14 @@ $shadows-big: multiple-box-shadow(100);
     }
 
     &__foot {
-        background: linear-gradient(-45deg, #e4569e, #e4569e, #23a6d5, #23d5ab);
+        background: linear-gradient(-45deg, #23d5ab, #23a6d5, #e4569e, #e4569e);
         background-size: 400% 400%;
-        animation: gradient 15s ease infinite;
+        background-position: 0% 50%;
+
+
+        &--gradient {
+            animation: gradient 15s ease infinite;
+        }
     }
 
 }
@@ -167,6 +182,10 @@ $shadows-big: multiple-box-shadow(100);
     &__content {
         max-width: 400px;
         margin-left: auto;
+
+        @include media-breakpoint-down(md) {
+            margin: auto;
+        }
     }
 
     &__img {
@@ -175,7 +194,11 @@ $shadows-big: multiple-box-shadow(100);
         position: relative;
         z-index: 100;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(xl) {
+            max-width: 440px;
+        }
+
+        @include media-breakpoint-down(md) {
             max-width: 310px;
             margin: auto;
             margin-bottom: rem(70px);
@@ -195,7 +218,11 @@ $shadows-big: multiple-box-shadow(100);
         margin-bottom: rem(135px);
         line-height: 128%;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(xl) {
+            margin-bottom: rem(80px);
+        }
+
+        @include media-breakpoint-down(md) {
             font-size: rem(16px);
             max-width: 310px;
             margin: auto;
@@ -250,6 +277,10 @@ $shadows-big: multiple-box-shadow(100);
         text-align: center;
         margin-bottom: rem(86px);
         font-weight: 400;
+
+        @include media-breakpoint-down(lg) {
+            font-size: rem(36px);
+        }
 
         @include media-breakpoint-down(md) {
             font-size: rem(22px);
@@ -346,7 +377,7 @@ $shadows-big: multiple-box-shadow(100);
             max-width: 475px;
         }
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             max-width: 290px;
         }
     }
@@ -379,7 +410,13 @@ $shadows-big: multiple-box-shadow(100);
         justify-content: center;
         z-index: 10;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(lg) {
+            max-width: 340px;
+            height: 200px;
+            font-size: rem(28px);
+        }
+
+        @include media-breakpoint-down(md) {
             max-width: 290px;
             height: 120px;
             font-size: rem(20px);
@@ -396,7 +433,11 @@ $shadows-big: multiple-box-shadow(100);
             position: absolute;
             border-radius: 50%;
 
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(lg) {
+                height: 200px;
+            }
+
+            @include media-breakpoint-down(md) {
                 height: 120px;
             }
         }
@@ -504,6 +545,10 @@ $shadows-big: multiple-box-shadow(100);
             left: -400px;
         }
 
+        @include media-breakpoint-down(lg) {
+            left: -600px;
+        }
+
         @include media-breakpoint-down(md) {
             left: -5%;
             max-width: 110%;
@@ -525,7 +570,7 @@ $shadows-big: multiple-box-shadow(100);
         z-index: 10;
         transition: 700ms;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             max-width: 330px;
             margin: auto;
         }
@@ -551,7 +596,7 @@ $shadows-big: multiple-box-shadow(100);
         margin-bottom: rem(32px);
         text-transform: uppercase;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             font-size: rem(20px);
             margin-bottom: rem(41vh);
             margin-top: rem(50px);
@@ -565,7 +610,7 @@ $shadows-big: multiple-box-shadow(100);
         align-items: center;
         margin-bottom: rem(36px);
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             margin-bottom: rem(30px);
         }
     }
@@ -613,9 +658,9 @@ $shadows-big: multiple-box-shadow(100);
     }
 
     &__heading {
-        font-size: rem(36px);
+        font-size: rem(22px);
         color: #fff;
-        font-weight: 300;
+        font-weight: 700;
         margin-bottom: rem(80px);
 
         @include media-breakpoint-down(md) {
@@ -704,7 +749,7 @@ $shadows-big: multiple-box-shadow(100);
         gap: rem(22px 115px);
 
         @include media-breakpoint-down(md) {
-            grid-template-columns: repeat(1,1fr);
+            grid-template-columns: repeat(1, 1fr);
             gap: 0;
         }
     }
