--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -28,6 +28,9 @@ $container-max-widths: (
 @import "components/modals";
 @import "components/breadcrumbs";
 @import "components/form";
+@import "components/tabs";
+@import "components/table";
 @import "layout/header";
 @import "layout/footer";
 @import "pages/frontpage";
+@import "pages/research-page";
