--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,3 +1,17 @@
 h1 {
-    font-weight: 700;
+    font-weight: 400;
+    font-size: rem(36px);
+}
+
+h2 {
+    font-size: rem(20px);
+}
+
+h3 {
+    font-size: rem(18px);
+}
+
+p {
+    font-size: rem(14px);
+    margin-bottom: rem(16px);
 }
