--- a/src/views/templates/header.ejs
+++ b/src/views/templates/header.ejs
@@ -7,15 +7,11 @@
     <title>
         <%= title %>
     </title>
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
 
-    <header class="header">
+    <header class="header header--dark">
         <div class="container">
             <div class="header__wrap">
                 <a href="" class="header__logo">
