--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -34,3 +34,4 @@ $container-max-widths: (
 @import "layout/footer";
 @import "pages/frontpage";
 @import "pages/research-page";
+@import "pages/page";
