--- a/src/views/templates/_research-item.ejs
+++ b/src/views/templates/_research-item.ejs
@@ -5,7 +5,7 @@
         <div class="research-item__info">
             <%= content %>
         </div>
-        <div class="research-item__sources">
+        <div class="research-item__sources" data-title="Источники:"> 
             <%= sources %>
         </div>
     </div>
