--- a/src/views/templates/header.ejs
+++ b/src/views/templates/header.ejs
@@ -11,28 +11,46 @@
 
 <body>
 
-    <header class="header header--dark">
-        <div class="container">
-            <div class="header__wrap">
-                <a href="" class="header__logo">
-                    <svg width="95" height="32" viewBox="0 0 95 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M22.6235 4.72394L5.47043 4.72394L5.47043 13.227L21.3903 13.227V17.7715L5.47043 17.7715L5.47043 27.2194L22.8923 27.2194V32.0283L0 32.0283L0 0L22.6235 0V4.72394Z"
-                            fill="white" />
-                        <path d="M41.1765 32H26.9626L26.9626 0L31.1072 0L31.1072 28.3437L41.1765 28.3437V32Z"
-                            fill="white" />
-                        <path
-                            d="M57.699 15.5512L69.0292 32H65.4132L57.5599 20.5397C56.9498 19.6616 56.3925 18.7466 55.891 17.7998C55.2161 18.6554 54.5967 19.5549 54.0366 20.4925L46.1369 32H42.697L54.12 15.5512L43.411 0L46.9343 0L53.9439 10.251C54.6485 11.2808 55.2234 12.4051 55.891 13.4349C56.5956 12.4051 57.3003 11.2808 57.9122 10.2037L65.1072 0L68.408 0L57.699 15.5512Z"
-                            fill="white" />
-                        <path
-                            d="M84.4207 0C87.3784 0 89.3626 0.453499 90.911 1.48332C92.0392 2.24788 92.9557 3.29497 93.5727 4.52417C94.1896 5.75338 94.4863 7.12348 94.4343 8.5031C94.4343 12.8208 91.7826 15.7402 87.7678 16.5055C90.5494 16.9495 92.9323 17.9415 93.5442 21.4467C94.082 24.4133 93.8131 27.5123 94.388 30.4789C94.4627 31.0333 94.6732 31.5597 94.9999 32.0094L92.8859 32.0094C92.6575 31.6085 92.5094 31.1653 92.4501 30.7056C92.2276 29.2601 92.0978 25.4432 92.0051 24.0921C91.56 18.0738 88.6116 17.2613 83.1411 17.2613L73.3964 17.2613V32H71.542V0L84.4207 0ZM73.3964 15.6835L82.8723 15.6835C87.6844 15.6835 92.5336 14.6064 92.5336 8.58813C92.61 7.46668 92.3834 6.34532 91.8783 5.34591C91.3732 4.3465 90.6089 3.50727 89.6686 2.9194C87.8142 1.75731 86.0062 1.66283 83.7995 1.66283L73.3964 1.66283V15.6835Z"
-                            fill="white" />
-                    </svg>
-                </a>
+    <header class="header  <%= title == 'Frontpage' ? null : 'header--dark' %>">
+        <div class="header__wrap">
+            <a href="" class="header__logo">
+                <svg width="95" height="32" viewBox="0 0 95 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M22.6235 4.72394L5.47043 4.72394L5.47043 13.227L21.3903 13.227V17.7715L5.47043 17.7715L5.47043 27.2194L22.8923 27.2194V32.0283L0 32.0283L0 0L22.6235 0V4.72394Z"
+                        fill="white" />
+                    <path d="M41.1765 32H26.9626L26.9626 0L31.1072 0L31.1072 28.3437L41.1765 28.3437V32Z"
+                        fill="white" />
+                    <path
+                        d="M57.699 15.5512L69.0292 32H65.4132L57.5599 20.5397C56.9498 19.6616 56.3925 18.7466 55.891 17.7998C55.2161 18.6554 54.5967 19.5549 54.0366 20.4925L46.1369 32H42.697L54.12 15.5512L43.411 0L46.9343 0L53.9439 10.251C54.6485 11.2808 55.2234 12.4051 55.891 13.4349C56.5956 12.4051 57.3003 11.2808 57.9122 10.2037L65.1072 0L68.408 0L57.699 15.5512Z"
+                        fill="white" />
+                    <path
+                        d="M84.4207 0C87.3784 0 89.3626 0.453499 90.911 1.48332C92.0392 2.24788 92.9557 3.29497 93.5727 4.52417C94.1896 5.75338 94.4863 7.12348 94.4343 8.5031C94.4343 12.8208 91.7826 15.7402 87.7678 16.5055C90.5494 16.9495 92.9323 17.9415 93.5442 21.4467C94.082 24.4133 93.8131 27.5123 94.388 30.4789C94.4627 31.0333 94.6732 31.5597 94.9999 32.0094L92.8859 32.0094C92.6575 31.6085 92.5094 31.1653 92.4501 30.7056C92.2276 29.2601 92.0978 25.4432 92.0051 24.0921C91.56 18.0738 88.6116 17.2613 83.1411 17.2613L73.3964 17.2613V32H71.542V0L84.4207 0ZM73.3964 15.6835L82.8723 15.6835C87.6844 15.6835 92.5336 14.6064 92.5336 8.58813C92.61 7.46668 92.3834 6.34532 91.8783 5.34591C91.3732 4.3465 90.6089 3.50727 89.6686 2.9194C87.8142 1.75731 86.0062 1.66283 83.7995 1.66283L73.3964 1.66283V15.6835Z"
+                        fill="white" />
+                </svg>
+            </a>
 
-                <button class="header__toggler">
-                    <span></span><span></span>
-                </button>
-            </div>
+            <button class="header__toggler">
+                <span></span><span></span>
+            </button>
+        </div>
+
+        <div class="header__header-menu">
+            <ul class="header-menu__list">
+                <li class="header-menu__item">
+                    <a href="" class="header-menu__link">Как это работает</a>
+                </li>
+                <li class="header-menu__item">
+                    <a href="" class="header-menu__link">Действите компонентов и исследования эффективности</a>
+                </li>
+                <li class="header-menu__item">
+                    <a href="" class="header-menu__link">Инструкция по применению</a>
+                </li>
+                <li class="header-menu__item">
+                    <a href="" class="header-menu__link">Часто задаваемые вопросы</a>
+                </li>
+                <li class="header-menu__item">
+                    <a href="" class="header-menu__link">Заказать</a>
+                </li>
+            </ul>
         </div>
     </header>
