--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -42,3 +42,33 @@ body {
     clip: rect(0, 0, 0, 0);
     border: 0;
 }
+
+.gradient-balls {
+    
+    &__ball {
+        width: 640px;
+        height: 640px;
+        position: absolute;
+
+        &--1 {
+            animation: ball1 30s linear infinite;
+            left: 20%;
+            top: 0;
+            background: radial-gradient(50% 50% at 50% 50%, rgba(203, 19, 106, 0.7) 0%, rgba(204, 32, 88, 0.4) 41%, rgba(206, 49, 63, 0) 100%);
+        }
+
+        &--2 {
+            animation: ball2 30s linear infinite;
+            right: 0;
+            top: 20%;
+            background: radial-gradient(50% 50% at 50% 50%, rgba(0, 135, 212, 0.8) 0%, rgba(22, 137, 194, 0.52) 32%, rgba(53, 141, 170, 0.15) 79%, rgba(65, 142, 161, 0) 100%);
+        }
+
+        &--3 {
+            animation: ball3 30s linear infinite;
+            bottom: -10%;
+            left: 40%;
+            background: radial-gradient(50% 50% at 50% 50%, rgba(140, 16, 255, 0.8) 0%, rgba(139, 37, 226, 0.6) 23%, rgba(136, 85, 162, 0.17) 76%, rgba(135, 104, 137, 0) 100%);
+        }
+    }
+}
