--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,6 +1,10 @@
 h1 {
     font-weight: 400;
     font-size: rem(36px);
+
+    @include media-breakpoint-down(md) {
+        font-size: rem(25px);
+    }
 }
 
 h2 {
@@ -14,4 +18,35 @@ h3 {
 p {
     font-size: rem(14px);
     margin-bottom: rem(16px);
+}
+
+ul {
+    font-size: rem(14px)
+}
+
+ol {
+    @include unlist;
+    font-size: rem(14px);
+
+    li {
+        counter-increment: num;
+        display: flex;
+        align-items: baseline;
+  
+
+        &::before {
+            content: counter(num);
+            min-width: 16px;
+            height: 16px;
+            border: 1px solid $dark;
+            font-size: rem(10px);
+            color: $dark;
+            margin-right: rem(16px);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            line-height: 1;
+        }
+    }
 }
