--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -2,7 +2,9 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    right: 0;
+    width: calc(100% - 40px);
+    margin: auto;
     z-index: 100;
     padding: rem(32px 0);
 
@@ -13,12 +15,30 @@
     }
 
     &__toggler {
+        z-index: 10;
         span {
             width: 40px;
             height: 2px;
-            background:#fff;
+            background: #fff;
             display: block;
             margin-bottom: rem(12px);
+            transform-origin: center;
+            transition: 350ms;
+        }
+
+        &--active {
+            span {
+                background-color: #fff !important;
+                transition: 350ms;
+
+                &:first-of-type {
+                    transform: rotate(-45deg);
+                }
+
+                &:last-of-type {
+                    transform: rotate(45deg) translate(-10px, -10px);
+                }
+            }
         }
     }
 
@@ -28,9 +48,68 @@
                 fill: $dark;
             }
         }
+
         .header__toggler span {
             background: $dark;
         }
     }
 
+    &__header-menu {
+        position: fixed;
+        left: 0;
+        top: 0;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        padding: rem(0 30px);
+        background: linear-gradient(-45deg, #23d5ab, #23a6d5, #e4569e, #e4569e);
+        background-size: 400% 400%;
+        background-position: 0% 50%;
+        animation: gradient 15s ease infinite;
+        opacity: 0;
+        transition: 500ms;
+
+        &--active {
+            opacity: 1;
+            transition: 500ms
+        }
+    }
+
+}
+
+.header-menu {
+
+
+    &__list {
+        @include unlist;
+    }
+
+    &__item {
+        margin-bottom: rem(34px);
+
+        &:last-of-type {
+            margin-bottom: 0;
+        }
+    }
+
+    &__link {
+        color: #fff;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: rem(36px);
+
+        @include media-breakpoint-down(md) {
+            font-size: rem(24px);
+            text-align: center;
+            display: flex;
+            justify-content: center;
+        }
+
+        &:hover {
+            color: #fff;
+        }
+    }
 }
