--- a/src/assets/scss/base/_fonts.scss
+++ b/src/assets/scss/base/_fonts.scss
@@ -5,6 +5,7 @@ $font-weight: 400, $font-style: normal, $support-required: 'modern') {
         font-family: $font-name;
         font-style: $font-style;
         font-weight: $font-weight;
+        font-display: swap;
 
         @if $support-required=='oldie' {
             src: url('#{$font-path}.eot');
