--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,7 +3,7 @@
   <div class="frontpage">
 
     <div class="frontpage__advantage-block-circle">
-      <img src="" alt="">
+      <img alt="">
     </div>
 
     <div class="frontpage__wrap" id="frontpage">
