--- a/src/views/page.html
+++ b/src/views/page.html
@@ -20,9 +20,11 @@
                         <div class="row">
                             <div class="col-lg-7">
                                 <p>
-                                    Биологически активная добавка к пище «ЭЛ ИКС АР» («ELXR») разработана и рекомендуется
+                                    Биологически активная добавка к пище «ЭЛ ИКС АР» («ELXR») разработана и
+                                    рекомендуется
                                     как
-                                    комплексный продукт, состоящий из 3-х видов капсул: «После сна», «В течение дня», «Перед
+                                    комплексный продукт, состоящий из 3-х видов капсул: «После сна», «В течение дня»,
+                                    «Перед
                                     сном».я
                                 </p>
                                 <h2>
@@ -52,9 +54,11 @@
                                 </h2>
                                 <table>
                                     <thead>
-                                        <th>Действующее вещество</th>
-                                        <th>Содежание в капс, мг</th>
-                                        <th>Уровень суточного потребления, мг</th>
+                                        <tr>
+                                            <th>Действующее вещество</th>
+                                            <th>Содежание в капс, мг</th>
+                                            <th>Уровень суточного потребления, мг</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
@@ -144,9 +148,11 @@
                                 </h2>
                                 <table>
                                     <thead>
-                                        <th>Действующее вещество</th>
-                                        <th>Содежание в капс, мг</th>
-                                        <th>Уровень суточного потребления, мг</th>
+                                        <tr>
+                                            <th>Действующее вещество</th>
+                                            <th>Содежание в капс, мг</th>
+                                            <th>Уровень суточного потребления, мг</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
@@ -181,7 +187,8 @@
                                 <ol>
                                     <li>рекомендуемый уровень суточного потребления согласно требованиям ТР ТС 022
                                         (Приложение 2).</li>
-                                    <li>адекватный уровень суточного потребления согласно требованиям ЕврАзЭС (Приложение
+                                    <li>адекватный уровень суточного потребления согласно требованиям ЕврАзЭС
+                                        (Приложение
                                         5).</li>
                                     <li>не превышает верхний допустимый уровень суточного потребления.</li>
                                     <li>уровень суточного потребления не установлен</li>
@@ -208,9 +215,11 @@
                                 </h2>
                                 <table>
                                     <thead>
-                                        <th>Действующее вещество</th>
-                                        <th>Содежание в капс, мг</th>
-                                        <th>Уровень суточного потребления, мг</th>
+                                        <tr>
+                                            <th>Действующее вещество</th>
+                                            <th>Содежание в капс, мг</th>
+                                            <th>Уровень суточного потребления, мг</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
@@ -257,7 +266,8 @@
                                 </table>
                                 <h3>Область применения:</h3>
                                 <p>
-                                    в качестве биологически активной добавки к пище – дополнительного источника L-глутамина,
+                                    в качестве биологически активной добавки к пище – дополнительного источника
+                                    L-глутамина,
                                     витаминов
                                     В1, В3, В6, В12, минеральных веществ кальция, магния, цинка, марганца, источника
                                     кофеина,
@@ -270,7 +280,8 @@
                                     взрослым принимать по 2 капсулы - капсулы «После сна» утром после еды; капсулы «В
                                     течение дня»
                                     днем
-                                    во время еды, запивая большим количеством воды; капсулы «Перед сном» в вечернее время
+                                    во время еды, запивая большим количеством воды; капсулы «Перед сном» в вечернее
+                                    время
                                     после еды.
                                 </p>
                                 <h3>Продолжительность приема</h3>
@@ -280,9 +291,11 @@
                                     капсулы «После сна» – индивидуальная непереносимость компонентов, беременность,
                                     кормление
                                     грудью,
-                                    повышенная нервная возбудимость, бессонница, повышенное артериальное давление, нарушение
+                                    повышенная нервная возбудимость, бессонница, повышенное артериальное давление,
+                                    нарушение
                                     ритма
-                                    сердечной деятельности, выраженный атеросклероз; капсулы «В течение дня» и «Перед сном»
+                                    сердечной деятельности, выраженный атеросклероз; капсулы «В течение дня» и «Перед
+                                    сном»
                                     –
                                     индивидуальная непереносимость компонентов, беременность, кормление грудью. Перед
                                     применением
@@ -303,7 +316,8 @@
                                 <h3>Местонахождение, телефон организации, уполномоченной принимать претензии от
                                     потребителей:</h3>
                                 <p>
-                                    ООО «ЭЛ ИКС АР», 127055, г. Москва, ул. Сущёвская, д. 27, стр. 2, э. 3 пом. III ком. 3
+                                    ООО «ЭЛ ИКС АР», 127055, г. Москва, ул. Сущёвская, д. 27, стр. 2, э. 3 пом. III ком.
+                                    3
                                     оф. 152
                                     (Российская Федерация), тел.: +7(905) 582-99-22.
                                 </p>
