--- a/src/views/templates/footer.ejs
+++ b/src/views/templates/footer.ejs
@@ -26,8 +26,8 @@
                         </ul>
                     </div>
                     <div class="footer__notice">
-                        Биологически активная добавка к пище "Эл Икс Ар" </br>
-                        Не является лекарственным средством </br>
+                        Биологически активная добавка к пище "Эл Икс Ар" <br>
+                        Не является лекарственным средством <br>
                         Перед применением проконсультируйтесь с врачом
                     </div>
                     <div class="footer__footer-links footer-links">
@@ -214,8 +214,10 @@
                             </div>
                             <table class="tabs__table table table--light">
                                 <thead>
-                                    <th>Действующее вещество</th>
-                                    <th>Содежание в капс, мг</th>
+                                    <tr>
+                                        <th>Действующее вещество</th>
+                                        <th>Содежание в капс, мг</th>
+                                    </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
@@ -298,8 +300,10 @@
                             </div>
                             <table class="tabs__table table table--light">
                                 <thead>
-                                    <th>Действующее вещество</th>
-                                    <th>Содежание в капс, мг</th>
+                                    <tr>
+                                        <th>Действующее вещество</th>
+                                        <th>Содежание в капс, мг</th>
+                                    </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
@@ -342,8 +346,10 @@
                             </div>
                             <table class="tabs__table table table--light">
                                 <thead>
-                                    <th>Действующее вещество</th>
-                                    <th>Содежание в капс, мг</th>
+                                    <tr>
+                                        <th>Действующее вещество</th>
+                                        <th>Содежание в капс, мг</th>
+                                    </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
